# RescueRobot2026

./: .clang-tidy  .gitignore  99-esp-arm.rules  99-usb2can.rules  CPPLINT.cfg  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  docker-ci.yml  docker-image.yml  lint.yml
docs/: controller_mapping.txt
scripts/: clang_tidy_check.sh
src/ctrl_crawler/: CMakeLists.txt  package.xml
src/ctrl_crawler/src/: crawler.cpp
src/ctrl_dualarm/: CMakeLists.txt  package.xml
src/ctrl_dualarm/inc/: lib_servo.h
src/ctrl_dualarm/src/: dualarm_bridge.cpp  lib_servo.c
src/ctrl_joy2twist/: CMakeLists.txt  package.xml
src/ctrl_ps5_joy_parser/: CMakeLists.txt  package.xml
src/ctrl_ps5_joy_parser/src/: ps5_joy_parser.cpp
src/ctrl_square_diff_drive/: CMakeLists.txt  package.xml
src/ctrl_square_diff_drive/src/: square_diff_drive.cpp
src/ctrl_swerve_steer/: CMakeLists.txt  package.xml
src/ctrl_swerve_steer/src/: swerve_steer.cpp
src/ctrl_usb2can/: CMakeLists.txt  package.xml
src/ctrl_usb2can/inc/: lib_operator.h
src/ctrl_usb2can/src/: example.c  lib_operator.c  usb2can_bridge.cpp
src/joy2twist/src/: joy2twist.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: robot_a.yaml  robot_b.yaml
src/robot_bringup/launch/: robot_a.launch.py  robot_a_square.launch.py  robot_b.launch.py
src/robot_bringup/rviz/: robot_a.rviz  robot_b.rviz
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: ArmState.msg  ArmStates.msg  JoyInput.msg  WheelState.msg  WheelStates.msg
src/ui_arm/: CMakeLists.txt  package.xml  plugins_description.xml
src/ui_arm/include/ui_arm/: qt_node_pub_handler.hpp
src/ui_arm/src/widget/: arm.ui  widget.cpp  widget.hpp
src/ui_crawler/: CMakeLists.txt  package.xml  plugins_description.xml
src/ui_crawler/include/ui_crawler/: qt_node_pub_handler.hpp  qt_node_sub_handler.hpp  ros_types.hpp
src/ui_crawler/src/widget/: crawler.ui  widget.cpp  widget.hpp
src/ui_square_diff_drive/: CMakeLists.txt  package.xml  plugins_description.xml
src/ui_square_diff_drive/include/ui_square_diff_drive/: qt_node_pub_handler.hpp  qt_node_sub_handler.hpp  ros_types.hpp
src/ui_square_diff_drive/src/widget/: square_diff_drive.ui  widget.cpp  widget.hpp
src/ui_swerve_steer/: CMakeLists.txt  package.xml  plugins_description.xml
src/ui_swerve_steer/include/ui_swerve_steer/: qt_node_pub_handler.hpp  qt_node_sub_handler.hpp  ros_types.hpp
src/ui_swerve_steer/src/widget/: swerve_steer.ui  widget.cpp  widget.hpp
src/video_display_plugin/: CMakeLists.txt  package.xml  plugins_description.xml
src/video_display_plugin/include/video_display_plugin/: video_display.hpp
src/video_display_plugin/src/: video_display.cpp
