<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctrl_dualarm</name>
  <version>0.0.0</version>
  <description>Dual-arm servo bridge (ROS 2 to ESP32 over USB serial)</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
